[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-router"
version = "0.1.0"
description = "Nexus Router - Intelligent routing and resource management"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.9.0",
    "GPUtil>=1.4.0",
    "requests>=2.28.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=5.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus_router*"]
